# Tow

./: .gitignore  LICENSE.txt  Makefile  README.md  Tow.py  buildgui.bat  buildrun.bat  create_shortcut.py  environment.yml  mainwindow.py  mainwindow.ui  makeui.bat  makeui.sh  pyproject.toml  setup.py  test.py  tow_resources_rc.py
icons/: tow_resources.qrc
scripts/: create_shortcut.py  makeui.sh  tow-script.py  tow-script.pyw  tow.bat
tow/: __init__.py  mainwindow.py  mainwindow.ui  tow.py  tow_resources_rc.py
