[project]
name = "Tow"
dynamic = ["version"]
description = "An application for controlling the UNH tow tank's carriage motion."
readme = "README.md"
authors = [
    { name = "Pete Bachant", email = "petebachant@gmail.com" }
]
requires-python = "==3.10.*"
dependencies = [
    "acspy>=0.0.9",
    "numpy",
    "pyqt5",
    "pyqt5-qt5",
    "pywin32",
]

[project.scripts]
tow = "tow:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tow"]

[tool.hatch.version]
path = "tow/__init__.py"

[dependency-groups]
dev = [
    "pyinstaller",
    "pyqt5-tools>=5.15.9.3.3",
]

[tool.ruff]
line-length = 79
fix = true
exclude = ["tow/mainwindow.py", "tow/tow_resources_rc.py"]
